		classifier, distributions, features, distances, regression and
		preprocessors have been ported to r-modular (requires swig from svn).
		- The 'send_command' legacy is no longer necessary, numbers can be used
		as such and don't have to be given as strings. All examples for
		r,python,octave,matlab have been converted to the new syntax.
	* Bugfixes:
		- The weighted spectrum kernel is now working again.
		- Fix the testsuite to reliably check methods that use random().

2008-04-19  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.1
		- Now fully support octave-modular thanks to the swig team!
		- All python-modular examples describing the use of kernels,
		classifier, distributions, features, distances, regression and
		preprocessors have been ported to octave-modular.
		- Minor documentation updates.
		- Unconditionally disable swig director. This reduces wrapper code size
		and compile time and also speeds up calls to virtual functions *a lot*.
		Expect big speed improvements if you were using the python-modular
		interface.
	* Bugfixes:
		- Include missing files in documentation.
		- The 'send_command' legacy is no longer necessary.
		- Improved cmdline help, categorized in topic sg('help', 'topic')

2008-04-12  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.0
	* This release contains several major enhancements:
		- The static R,octave,matlab,python interfaces have been rewritten from
		scratch simplifying future extensions. They now use the same syntax and
		support the same set of shogun commands.
		- Toy examples describing the use of kernels, classifier,
		distributions, features, distances, regression and preprocessors
		for the static python, R, octave and matlab interface have been added.
		- Improved user documentation
		- Support for ACML and Intel MKL
	* New methods:
		- POIMs for python-modular interface
	* Bugfixes:
		- Fixed memory leaks in Classifiers, Kernels, Distributions